// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RippleButton /> should render as a disabled ripple button 1`] = `
<RippleButton
  className=""
  disabled={true}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={true}
    flat={false}
    onClick={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <Button
      className="ui-shared__button sg-1unzzoa-button ui-shared__ripple-button"
      disabled={true}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-o6wyfx-root-button"
        data-test-id="Button"
        disabled={true}
        onClick={null}
      >
        <div
          className="sg-ig6wzi-content"
        >
          Press me
        </div>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a primary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="primary"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button sg-vspxep-button ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-9gehqw-root-button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="sg-fpa50s-contentWrapper"
          color="var(--sg-palette-common-black)"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple sg-fpa50s-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button effect if type is omitted 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="primary"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button sg-vspxep-button ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-9gehqw-root-button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="sg-fpa50s-contentWrapper"
          color="var(--sg-palette-common-black)"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple sg-fpa50s-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button if type is explicitly defined 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="regular"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="regular"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button sg-1srupkh-button ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-1i1u4hw-root-button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="sg-fpa50s-contentWrapper"
          color="var(--sg-palette-common-black)"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple sg-fpa50s-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a secondary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="secondary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="secondary"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button sg-so4hxh-button ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-3sajli-root-button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="sg-fpa50s-contentWrapper"
          color="var(--sg-palette-common-black)"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple sg-fpa50s-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;
